# duo-imxrt

./: .gitignore  .gitmodules  License  Readme.md  arduino-rt1011.cpp  blinky.cpp  board.c  board.h  bs814a.h  compile_commands.json  fastled_compat.h  pin_mux.c  variant.c  variant.h
armgcc/: build.sh  (+8 more)
brains2/: CMakeLists.txt  build.sh  shell.nix
brains2/apps/demos/fast_led/: fast_led_demo.cpp
brains2/apps/demos/flexio-leds/: CMakeLists.txt  flexio_leds.cpp  mcuoneclipse_demo.c
brains2/apps/demos/leds/: CMakeLists.txt  led_demo.cpp
brains2/apps/demos/midi/: CMakeLists.txt
brains2/apps/demos/mqs/: mqs_demo.cpp
brains2/apps/demos/teensy_audio/: CMakeLists.txt
brains2/apps/duo/: CMakeLists.txt  globals.h  keypad.h  main.cpp  tempo.cpp
brains2/apps/sample_player/: CMakeLists.txt  main.cpp  output.h  rompler.h
brains2/apps/sample_player/testing/: rhythm.py
brains2/apps/support/: app.cpp  app.h
brains2/apps/test_app/: CMakeLists.txt  main.cpp
brains2/cmake/: add_git_defines.cmake  app_support.cmake  build_app.cmake  core.cmake  dato_board.cmake  deps.cmake  flags.cmake  lib.cmake  libraries.cmake  modules.cmake  sdk.cmake  usb.cmake
brains2/components/: component_tinyusb.cmake
brains2/components/Arduino/: component_Arduino_MIMXRT1011.cmake
brains2/components/audio/: fsl_adapter_sai.c
brains2/components/codec/cs42888/: fsl_cs42888.h
brains2/components/codec/da7212/: fsl_dialog7212.h
brains2/components/log/: fsl_component_log_backend_debugconsole.c
brains2/core/: CMakeLists.txt  syscall_stubs.c
brains2/core/armgcc/: arm-none-eabi-gcc.cmake  build_all.sh
brains2/core/boards/DUO_BRAINS_2.0/: board_audio_output.h  led_pins.h  pins.cpp
brains2/core/boards/DUO_BRAINS_2.0-beta1/: led_pins.h  pins.cpp
brains2/core/boards/DUO_BRAINS_2.1/: audio.cpp  board_audio_output.h  pins.cpp
brains2/core/components/Arduino/: wiring_digital.c
brains2/core/components/log/: fsl_component_log.h  fsl_component_log_backend_debugconsole.h  fsl_component_log_backend_ringbuffer.c
brains2/core/components/serial_manager/: fsl_component_serial_port_spi.h
brains2/core/devices/MIMXRT1011/: MIMXRT1011_features.h
brains2/core/docs/MCUXpresso SDK API Reference Manual_MIMXRT1011/: a00009.html  a00026.html  a00036.html  a00047.html  a00058.html  a00215.html  dir_18783cec49cb092c03d4752076f87193.html  dir_3997eead5334bab59bec4bc8f7bed34e.html  dir_409f97388efe006bc3438b95e9edef48.html  dir_48dd3c62d7c86167056c35ed6b546d27.html  dir_919453c527cd3b17be9d0977f49b7a97.html  dir_a3133d333b1a52973d87e73438740fd6.html  dir_ac27e55de1ef6261efd7d1c7a362f483.html  dir_b8d188f51028c3fedeb5d1161dcb195a.html  dir_e99ace8fac5dd22e9f2f431a93258c42.html
brains2/core/lib/: audio.h  clock_config.c  leds.cpp  leds.h  midi_wrapper.cpp  midi_wrapper.h  sync.cpp  variant.h
brains2/core/lib/usb/: tusb_config.h  usb.cpp  usb_descriptors.c
brains2/core/src/arduino_compat/: clock_config.h
brains2/core/src/lib/: leds.h  pixeltypes.h  sync.cpp
brains2/devices/MIMXRT1011/drivers/: fsl_flexram_allocate.h
brains2/devices/MIMXRT1011/mcuxpresso/: startup_mimxrt1011.c
brains2/devices/MIMXRT1011/project_template/: peripherals.c
brains2/devices/MIMXRT1011/template/: RTE_Device.h
brains2/docs/MCUXpresso SDK API Reference Manual_MIMXRT1011/: a00029.html  a00044.html  a00048.html  a00065.html  a00213.html  a00220.html  a00222.html  dir_359c99d5e819eaeefa000c9e7ec6b35a.html  dir_ab288a44216b7eb552fb10e6729bbf08.html  dir_be95ef627628abc71b4628041dc41e83.html  dir_c83995204529212f149d093e598b8cfe.html
brains2/docs/MCUXpresso SDK API Reference Manual_MIMXRT1011/search/: typedefs_6c.html  variables_6b.html
brains2/libraries/Arduino/: pins_arduino.h
brains2/libraries/Teensy_Audio/: component_Teensy_Audio_MIMXRT1011.cmake  effect_delay.h
brains2/scripts/: build.sh  clean.sh  load.sh  send_firmware.sh
brains2/sdk/: CMakeLists.txt  flags.cmake  flags_flexspi_nor_release.cmake  flags_old.cmake
brains2/sdk/components/: component_tinyusb.cmake
brains2/sdk/components/Teensy_Audio/: effect_fade.cpp
brains2/sdk/components/ft6x06/: fsl_ft6x06.c
brains2/sdk/components/fxos8700cq/: fsl_fxos.c
brains2/sdk/components/log/: fsl_component_log_config.h
brains2/sdk/xip/: driver_xip_board_duobrains2_MIMXRT1011.cmake
brains2/src/: CMakeLists.txt  build.sh
demos/leds/: CMakeLists.txt  led_demo.cpp
demos/synth/: CMakeLists.txt  synth_demo.cpp
demos/teensy_audio/: CMakeLists.txt  teensy_audio.cpp
demos/usb_arduino_midi/: CMakeLists.txt  usb_arduino_midi.cpp
demos/usb_midi/: CMakeLists.txt  usb_descriptors.c  usb_midi.cpp
demos/usb_midi_basic/: CMakeLists.txt  usb_midi.cpp
platform/brains2/src/: CMakeLists.txt  build.sh  load.sh  send_firmware.sh  shell.nix
platform/imxrt/armgcc/: CMakeLists.txt
shared/duo/test/: CMakeLists.txt
src/demos/fast_led/: CMakeLists.txt
src/demos/pt8211/: CMakeLists.txt  music-silence.h  music.h  pt8211_demo.cpp
src/demos/usb_arduino_midi/: CMakeLists.txt  usb_arduino_midi.cpp
src/duo-brains-rev2/: CMakeLists.txt
src/duo-brains-rev2/duo/: amp_controls.h  buttons.h  globals.h  main.cpp  pinmap.h  pins_duo_rev2.cpp  pins_duo_rev2.h  power.h
src/duo-brains-rev2/stubs/: arduino_stubs.h  midi_stub.h  power_stubs.h
src/duo-imxrt/: CMakeLists.txt
src/duo-imxrt/duo/: buttons.h  drums.cpp  drums.h  globals.h  keypad.h  main.cpp  pinmap.h  pins.h  pins_duo_imxrt.cpp  pins_duo_imxrt.h
src/duo-imxrt/stubs/: MidiFunctions_stubs.h  arduino_stubs.h  power_stubs.h
src/duobrains2/: Buttons.h  CMakeLists.txt  Keypad.h  Leds.h  Makefile  duoleds.h  globals.h  main.cpp
src/duobrains2/adapters/: FastLED.cpp  FastLED.h
src/duobrains2/duo1/: Leds.h  MidiFunctions.h  TempoHandler.h  duoleds.h  note_stack.h  pinmap.h  pins_duo_2.0.h
src/duobrains2/duo2/: globals.h  key.h  keypad.h  keys.h  main.cpp
src/duobrains2/stubs/: color.h  fastled_stub.h  hsv2rgb.cpp  leds_stub.h  midi_stub.h  sequencer_stub.h
test/: CMakeLists.txt  run_tests.sh  runner.cpp
test/firmware/: sequencer_helpers.h  sequencer_test.cpp  sequencer_test.h
test/unity/: unity_config.h
(+503 files in other folders)
