[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []

[dependencies]
# paste = "1.0.12"
# snafu = { version = "0.7.4", default-features = false }
palette = { version = "0.7.2", default-features = false, features = ["libm"] }
# cassette = "0.2.3"

# [dependencies.ws2812-flexio]
# version = "0.1.0"

[dependencies.ws2812-flexio]
# version = "0.2"
path = "../ws2812-flexio"

[dependencies.imxrt-ral]
version = "0.5"
features = ["imxrt1011"]
#
[dependencies.imxrt-iomuxc]
version = "0.2"
features = ["imxrt1010"]

[lib]
crate-type = ["staticlib"]
path = "src/duolib.rs"

